--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="heading">
     <h1>Online Quiz</h1>
+    </div>
+    <br>
     <div class="quiz">
         <div id="question-container">
             <h4 id="question"></h4>
